code_1
bmp280.cpp: In function ‘bool readCalibration(int)’:
bmp280.cpp:8:19: error: lvalue required as unary ‘&’ operand
    8 | #define REG_CALIB 0x88       // Registres de calibration
      |                   ^~~~
bmp280.cpp:26:22: note: in expansion of macro ‘REG_CALIB’
   26 |     if (write(file, &REG_CALIB, 1) != 1 || read(file, data, 24) != 24)
      |                      ^~~~~~~~~
bmp280.cpp: In function ‘int main()’:
bmp280.cpp:10:22: error: lvalue required as unary ‘&’ operand
   10 | #define REG_TEMP_MSB 0xFA    // Registre de température brute
      |                      ^~~~
bmp280.cpp:106:26: note: in expansion of macro ‘REG_TEMP_MSB’
  106 |         if (write(file, &REG_TEMP_MSB, 1) != 1 || read(file, data, 3) != 3) {
      |                          ^~~~~~~~~~~~
bmp280.cpp:9:23: error: lvalue required as unary ‘&’ operand
    9 | #define REG_PRESS_MSB 0xF7   // Registre de pression brute
      |                       ^~~~
bmp280.cpp:116:26: note: in expansion of macro ‘REG_PRESS_MSB’
  116 |         if (write(file, &REG_PRESS_MSB, 1) != 1 || read(file, data, 3) != 3) {
      |                          ^~~~~~~~~~~~~

